examples/test/testpolicy3531.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3531
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key26: value14
      key7: value46
      key30: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value25
          key16: value15
      podSelector:
        matchLabels:
          key49: value49
          key29: value28
